salesforce/call-journey/source/objects/Contact_Center_Call__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Connected__c</fullName>
        <label>Agent Connected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <label>Agent</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Ended__c</fullName>
        <label>Call Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Received_Label__c</fullName>
        <label>Call Received (display)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Received__c</fullName>
        <label>Call Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Called_Number__c</fullName>
        <label>Called Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Caller_Phone__c</fullName>
        <label>Caller Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contact Center Calls</relationshipLabel>
        <relationshipName>Contact_Center_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Center Calls</relationshipLabel>
        <relationshipName>Contact_Center_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversation_Id__c</fullName>
        <externalId>true</externalId>
        <label>D365 Conversation ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Sentiment__c</fullName>
        <label>Customer Sentiment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handle_Time_Seconds__c</fullName>
        <label>Handle Time (sec)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handled_By_Virtual_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handled by Virtual Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Action_Plan__c</fullName>
        <label>Coaching Recommendation</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quality_Evaluated_At__c</fullName>
        <label>Evaluated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quality_Evaluation_Json__c</fullName>
        <description>Raw D365 Quality Evaluation Agent result (msdyn_evaluationhistory.msdyn_responsejson). Rendered by the Call Journey card.</description>
        <label>Evaluation Details (JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quality_Plan__c</fullName>
        <label>Evaluation Plan</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Score__c</fullName>
        <label>Quality Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Summary__c</fullName>
        <label>Evaluation Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recording_Url__c</fullName>
        <formula>IF(OR(ISBLANK(Conversation_Id__c), ISBLANK($Setup.D365_Contact_Center_Settings__c.Org_Url__c)), &quot;&quot;, IF(RIGHT($Setup.D365_Contact_Center_Settings__c.Org_Url__c, 1) = &quot;/&quot;, LEFT($Setup.D365_Contact_Center_Settings__c.Org_Url__c, LEN($Setup.D365_Contact_Center_Settings__c.Org_Url__c) - 1), $Setup.D365_Contact_Center_Settings__c.Org_Url__c) &amp; &quot;/main.aspx?&quot; &amp; IF(ISBLANK($Setup.D365_Contact_Center_Settings__c.App_Id__c), &quot;&quot;, &quot;appid=&quot; &amp; $Setup.D365_Contact_Center_Settings__c.App_Id__c &amp; &quot;&amp;&quot;) &amp; &quot;navbar=off&amp;pagetype=entityrecord&amp;etn=msdyn_ocliveworkitem&amp;id=&quot; &amp; Conversation_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recording URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recording__c</fullName>
        <formula>IF(ISBLANK(Conversation_Id__c), &quot;&quot;, HYPERLINK(Recording_Url__c, &quot;Open call recording &amp; transcript&quot;, &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recording &amp; Transcript</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                    <default>true</default>
                    <label>In progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talk_Time_Seconds__c</fullName>
        <label>Talk Time (sec)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Duration_Seconds__c</fullName>
        <formula>IF(OR(ISBLANK(Call_Ended__c), ISBLANK(Call_Received__c)), null, ROUND((Call_Ended__c - Call_Received__c) * 86400, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Duration (sec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Virtual_Agent_Seconds__c</fullName>
        <formula>IF(OR(ISBLANK(Agent_Connected__c), ISBLANK(Call_Received__c)), null, MAX(0, ROUND((Agent_Connected__c - Call_Received__c) * 86400, 0) - BLANKVALUE(Wait_Time_Seconds__c, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Virtual Agent Time (sec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wait_Time_Seconds__c</fullName>
        <label>Queue Wait (sec)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contact Center Call</label>
    <nameField>
        <label>Call</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Center Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>